# manos

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: manos.1
manos/: __init__.py  __main__.py  builtin.py  doxygen.py  option.py  ordered_set.py  roff.py  sentence.py
tests/: test_manos.py  test_segments.py
tests/admonition/: Doxyfile  admonition.h
tests/admonition/snapshot/: admonition.h.3
tests/audition/: Doxyfile  audition.h
tests/audition/snapshot/: abort.3  assert_eq.3  audit_now.3  audit_sleep.3  audit_time.3  audition.3  call.3  call_get.3  expect_eq_approx.3  fake.3  statuscode.3  test.3  test_iteration.3  testoptions.3
tests/code-references/: Doxyfile  code-references.h
tests/code-references/snapshot/: code-references.3  code-references.h.3  foo.3  foobar.3
tests/codeblock/: Doxyfile  codeblock.h
tests/complex/: Doxyfile  complex.h  dood.h  doodad.h  frob.h  froble.h
tests/dangling-punctuation/: Doxyfile  dangling-punctuation.h
tests/decorations/: Doxyfile  decorations.h
tests/deprecated/: Doxyfile  deprecated.h
tests/empty/: Doxyfile  empty.h
tests/enums/: Doxyfile  enums.h
tests/epilogue/: Doxyfile  epilogue.h  epilogue.txt
tests/escapes/: Doxyfile  escapes.h
tests/examples/: Doxyfile  bar.c  example.h  foo.c
tests/extra-sections/: Doxyfile  extra-sections.h
tests/filter/: Doxyfile  _filter.h  filter.h
tests/functions/: Doxyfile  functions.h
tests/functions-grouped/: Doxyfile  functions_grouped.h
tests/functions-params/: Doxyfile  functions-params.h
tests/inline-code/: Doxyfile  inline-code.h
tests/judo/: Doxyfile  judo.dox  judo.h
tests/links/: Doxyfile  links.h
tests/lists-ordered/: Doxyfile  lists.h
tests/lists-unordered/: lists.h
tests/preamble/: Doxyfile  preamble.h  preamble.txt
tests/preprocessor/: Doxyfile  preprocessor.h
tests/referenced/: Doxyfile  referenced.h
tests/sections/: Doxyfile  sections.h
tests/simple/: Doxyfile  simple.h
tests/structs/: Doxyfile  structs.h
tests/styling/: Doxyfile  styling.h
tests/subgroups/: Doxyfile  foo.h  subgroups.h
tests/tables/: Doxyfile  tables.h
tests/typedefs/: Doxyfile  alias.h  typedef.h
tests/unicode/: Doxyfile  unicode.h
tests/unicorn/: Doxyfile  unicorn.dox  unicorn.h
tests/unions/: Doxyfile  unions.h
tests/unsupported-commands/: Doxyfile  unsupported.h
tests/variables/: Doxyfile  variables.h
(+213 files in other folders)
