[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "manos"
version = "0.1.0"
license = { file = "LICENSE" }
description = "Generate man pages for C projects using Doxygen."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "lxml == 5.0.0",
  "lxml-stubs == 0.4.0",
]

[project.urls]
homepage = "https://github.com/hgs3/manos"
documentation = "https://github.com/hgs3/manos"
repository = "https://github.com/hgs3/manos"
changelog = "https://github.com/hgs3/manos/CHANGELOG.md"

[project.scripts]
manos = "manos.__main__:start"

[tool.setuptools.packages.find]
include = ["manos*"]
exclude = ["manos.tests*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.report]
omit = ["tests/*"]
exclude_also = [
  'if __name__ == "__main__":',
  'raise Exception',
]
