[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "manos"
version = "0.5.0"
license = { text = "GPL v3.0" }
description = "Generate man pages for C projects using Doxygen."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Documentation",
]
dependencies = [
  "lxml == 5.0.0",
  "lxml-stubs == 0.5.1",
]

[project.urls]
Source = "https://github.com/hgs3/manos.git"
Changelog = "https://github.com/hgs3/manos/blob/master/CHANGELOG.md"

[project.scripts]
manos = "manos.__main__:start"

[tool.setuptools.packages.find]
include = ["manos*"]
exclude = ["manos.tests*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.report]
omit = ["tests/*"]
exclude_also = [
  'if __name__ == "__main__":',
  'raise Exception',
]
